Criado botão de excluir

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -3,10 +3,15 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
-	<title>Agenda</title>
+	<title>Estoque Unipê</title>
 </h:head>
 <h:body>
 	<h:outputText value="Seja Bem-Vindo" />
 	<br />
+	<h:form>
+		<h:commandLink value="Listar Endereços" action="listarEnderecos" />
+		<h:commandLink value="Listar Usuários" action="listarUsuarios" />
+	</h:form>
 </h:body>
 </html>
+
