--- a/WebContent/alterarEndereco.xhtml
+++ b/WebContent/alterarEndereco.xhtml
@@ -1,88 +1,53 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"			
+	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>Estoque Unipê</title>
 </h:head>
 <h:body>
-	<h:messages style="color:red;" showDetail="true" showSummary="false"
-		globalOnly="true" />
-	<h:outputText value="Alterar Endereço" style="font-size:20pt;" />
-	<br />
-	<h:form id="form" prependId="false">
-		<h:outputLabel value="logradouro:" for="logradouro" />
-		<h:inputText id="logradouro" value="#{enderecoBean.endereco.logradouro}"
-			required="true" />
-		<h:message for="logradouro" />
-		<br />
-
-		<h:outputLabel value="municipio:" />
-		<h:inputText value="#{enderecoBean.endereco.municipio}" />
-		<br />
-
-		<h:outputLabel value="estado:" />
-		<h:inputText value="#{enderecoBean.endereco.estado}" />
-		<br />
-		
-		<h:outputLabel value="numero:" />
-		<h:inputText value="#{enderecoBean.endereco.numero}" />
-		<br />
-		
-		<h:outputLabel value="cep:" />
-		<h:inputText value="#{enderecoBean.endereco.cep}" />
-		<br />
-
-		<h:commandButton value="Cadastrar"
-		action="#{enderecoBean.adicionarEndereco}" />
+	<h:form>
+		<h:commandButton value="Home" action="index"></h:commandButton>
+		<h:commandButton value="Novo" action="#{enderecoBean.prepararCadastro}"></h:commandButton>
+		<h:commandButton value="Voltar" action="listarEnderecos"></h:commandButton>
 	</h:form>
-	<h:dataTable id="tableEnderecos" value="#{enderecoBean.listEndereco}"
-		var="endereco" border="1" cellpadding="10">
+	<h:form>	
+	<p:dataTable id="tableEnderecos" var="endereco" value="#{enderecoBean.listEndereco}">
 		<f:facet name="header">
-			<h:outputText value="Endereços" />
+			<p:outputPanel>
+				<h:outputText value="Alterar Endereços" style="font-size:20pt;"/>
+			</p:outputPanel>
 		</f:facet>
 		
-		<h:column>
-			<f:facet name="header">
-				<h:outputText value="Logradouro" />
-			</f:facet>
-			<h:inputText value="#{endereco.logradouro}" />
-		</h:column>
-
-		<h:column>
-			<f:facet name="header">
-				<h:outputText value="Municipio" />
-			</f:facet>
-			<h:inputText value="#{endereco.municipio}" />
-		</h:column>
-		
-		<h:column>
-			<f:facet name="header">
-				<h:outputText value="Estado" />
-			</f:facet>
+		<p:column headerText="Estado">
 			<h:inputText value="#{endereco.estado}" />
-		</h:column>
+		</p:column>
 		
-		<h:column>
-			<f:facet name="header">
-				<h:outputText value="Número" />
-			</f:facet>
-			<h:inputText value="#{endereco.numero}" />
-		</h:column>
+		<p:column headerText="Município">
+			<h:inputText value="#{endereco.municipio}" />
+		</p:column>
 		
-		<h:column>
-			<f:facet name="header">
-				<h:outputText value="Cep" />
-			</f:facet>
+		<p:column headerText="CEP">
 			<h:inputText value="#{endereco.cep}" />
-		</h:column>
-		<h:column>	
-			<h:form>			
-				<h:commandButton value="Alterar" action="#{enderecoBean.alterar(endereco)}" />
-				<h:commandButton value="delete" action="#{enderecoBean.remove(endereco)}" />	
-			</h:form>							
-		</h:column>		
-				
-	</h:dataTable>
+		</p:column>
+		
+		<p:column headerText="Bairro">
+			<h:inputText value="#{endereco.bairro}" />
+		</p:column>
+		
+		<p:column headerText="Logradouro">
+			<h:inputText value="#{endereco.logradouro}" />
+		</p:column>
+		
+		<p:column headerText="Número">
+			<h:inputText value="#{endereco.numero}" />
+		</p:column>
+		<p:column headerText="ಥ_ಥ">			
+			<p:commandButton value="Salvar" action="#{enderecoBean.update(endereco)}" />
+		</p:column>
+	</p:dataTable>
+	</h:form>
 </h:body>
 </html>
