--- a/WebContent/cadastroEndereco.xhtml
+++ b/WebContent/cadastroEndereco.xhtml
@@ -17,7 +17,7 @@
 				<p:outputLabel value="Estado" for="estado" />
 					<p:selectOneMenu id="estado" value="#{enderecoBean.selectEstado}"
 						converter="estadoConverter">
-						<f:selectItem itemLabel="Selecione..." noSelectionOption="true" />
+						<f:selectItem itemLabel="Selecione..." itemValue=""  noSelectionOption="true" />
 						<f:selectItems value="#{enderecoBean.listEstados}" />
 						<p:ajax event="change" update="municipio"
 							listener="#{enderecoBean.carregarMunicipios}" />
